--- a/styles/main.css
+++ b/styles/main.css
@@ -2,11 +2,15 @@ body {
     font-family: 'Nunito Sans', sans-serif;
 }
 
-.conteiner {
+.container {
     max-width: 1180px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+header {
+    border-bottom: 1px solid #DEDEDE;;
 }
 
 .header {
@@ -20,58 +24,55 @@ body {
 
 .header-logo {
     display: block;
+    width: 176px;
+    height: 56px;
     background-image: url(../images/logo.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 176px;
-    height: 56px;
 }
-
 .header-nav {
-    list-style-type: none;
     display: flex;
-    padding-left: 0;
     gap: 46px;
+    padding-left: 0;
+    list-style-type: none;
 }
-
 .header-nav a {
     font-size: 20px;
     font-weight: 600;
     color: #443737;
     text-decoration: none;
 }
-
+.header-nav a:hover {
+    color: #FFC725;
+}
 .header-nav a::after {
-    content: "";
+    content: '';
+    display: block;
     width: 100%;
     height: 3px;
     border-radius: 1.5px;
     background: transparent;
-    display: block;
 }
-
 .header-nav a.active::after {
     background: #FFC725;
 }
-
 .button {
     display: flex;
+    gap: 10px;
     align-items: center;
     background-color: transparent;
     border: none;
     padding: 0;
-    gap: 10px;
+    cursor: pointer;
 }
-
 .button-item {
-    position: relative; 
+    position: relative;
 }
-
 .button-count {
-    font-weight: 700;
     font-size: 13px;
-    color: #FFF;
-    background-color: #F37335;
+    font-weight: 700;
+    color: #fff;
+    background: #f37335;
     border-radius: 100%;
     position: absolute;
     width: 17px;
@@ -81,60 +82,107 @@ body {
     bottom: 3px;
     right: -4px;
 }
-
 .button-text {
-   color: #443737;
-   font-weight: 700;
-   font-size: 15px; 
+    font-size: 15px;
+    font-weight: 700;
+    color: #443737;
 }
-
 .bg {
     text-align: center;
-    color: #fff;
+    color: #ffffff;
     background-image: url(../images/bg.jpg);
     background-size: cover;
     background-position: center center;
     padding: 142px 0;
+    margin-bottom: 140px;
 }
-
 .breadcrumbs {
     padding-left: 0;
     margin-top: 0;
     list-style-type: none;
     display: flex;
     justify-content: center;
-    gap: 16px;
+    gap: 7px;
 }
-
-.breadcrumbs a {
-    color: #dedede;
+.breadcrumbs a{
+    color: #DEDEDE;
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
-    text-decoration: none;
+    text-decoration: none   ;
 }
-
-.breadcrumbs a::before {
+.breadcrumbs a:hover {
+    color: #FFC725;
+}
+.breadcrumbs a::before{
     content: "/";
     position: relative;
-    left: -7px;
+    left: -3px;
+    pointer-events: none;
 }
-
+.breadcrumbs a:hover::before {
+    color: #DEDEDE;
+}
 .breadcrumbs li:first-child a::before {
     display: none;
-} 
+}
 
 .title {
     font-size: 79px;
     font-weight: 700;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 17px;
+    margin-bottom: 20px;
 }
-
 .description {
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
-    line-height: 1.5;
-    color: #faf9f9;
+    line-height: 1.6;
+    color: #FAF9F9;
     max-width: 320px;
     margin: 0 auto;
+}
+
+.banner-box {
+    background-image: url(../images/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding: 100px;
+}
+.banner-title {
+    font-size: 60px;
+    font-weight: 900;
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 12px;
+}
+.banner-title span {
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-color: #f37335;
+    border-radius: 14px;
+    padding: 5px 0;
+    display: block;
+    max-width: 96px;
+    text-align: center;
+    margin-bottom: 9px;
+}
+.banner-text {
+    color: #FAF9F9;
+    font-size: 15px;
+    line-height: 1.6;
+    font-family: 'Open Sans', sans-serif;
+    max-width: 353px;
+    margin-top: 0;
+    margin-bottom: 35px;
+}
+.banner-link {
+    font-size: 14px;
+    padding: 20px 27px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: 1e2f40;
+    background-color: #fbb731;
+    border-radius: 5px;
 }
