--- a/styles/main.css
+++ b/styles/main.css
@@ -146,7 +146,8 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    padding: 100px;
+    padding: 100px 100px 120px;
+    margin-bottom: 100px;
 }
 .banner-title {
     font-size: 60px;
@@ -185,4 +186,95 @@ header {
     color: 1e2f40;
     background-color: #fbb731;
     border-radius: 5px;
+}
+
+.menu-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 34px;
+}
+.menu-title {
+    font-size: 44px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #1B2A49;
+    margin: 0;
+}
+.menu-select {
+    padding: 13px 30px;
+    border: 1px solid #DEDEDE;
+    border-radius: 22px;
+    color: #443737;
+    font-size: 15px;
+    appearance: none;
+    flex-basis: 279px;
+    background-image: url(../images/arrow.svg);
+    background-size: 12.79px 7.75px;
+    background-repeat: no-repeat;
+    background-position: 89% center;
+}
+.menu-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px 20px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.menu-grid-cover {
+    width: 100%;
+    height: 430px;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 23px;
+}
+.menu-grid-cover img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    width: 100%;
+    height: 430px;
+}
+.menu-grid-title {
+    font-size: 30px;
+    font-weight: 600;
+    color: #1B2A49;
+    margin: 0;
+}
+.menu-grid-price {
+    font-size: 20px;
+    font-weight: 700;
+    color: #979797;
+    margin-top: 8px;
+    margin-bottom: 22px;
+}
+.menu-grid-btn {
+    border: none;
+    background: #FBB731;
+    border-radius: 5px;
+    padding: 10px 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    gap: 9px;
+    cursor: pointer;
+}
+.menu-grid-icon {
+    display: block;
+    width: 18px;
+    height: 18px;
+    background-image: url(../images/cart-menu.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.menu-grid-text {
+    font-size: 14px;
+    font-weight: 700;
+    color: #1E2F40;
+    line-height: 1.3;
+    text-transform: uppercase;
 }
