--- a/styles/main.css
+++ b/styles/main.css
@@ -183,7 +183,7 @@ header {
     padding: 20px 27px;
     text-transform: uppercase;
     text-decoration: none;
-    color: 1e2f40;
+    color: #1E2F40;
     background-color: #fbb731;
     border-radius: 5px;
 }
