--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,12 @@ header {
     padding-top: 26px;
     padding-bottom: 25px;
 }
+.header-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-basis: 68.5%;
+}
 
 .header-logo {
     display: block;
@@ -180,14 +186,18 @@ header {
 }
 .banner-link {
     font-size: 14px;
-    padding: 20px 27px;
+    padding: 18px 25px;
     text-transform: uppercase;
     text-decoration: none;
     color: #1E2F40;
     background-color: #fbb731;
     border-radius: 5px;
+    border: 1px solid #fbb731;
 }
-
+.banner-link:hover {
+    background: transparent;
+    color: #fbb731;
+}
 .menu-header {
     display: flex;
     align-items: center;
@@ -263,6 +273,9 @@ header {
     gap: 9px;
     cursor: pointer;
 }
+.menu-grid-btn:hover{
+    background: #F37335;
+}
 .menu-grid-icon {
     display: block;
     width: 18px;
@@ -308,7 +321,7 @@ header {
     margin: 0;
 }
 
-.footer-item li {
+.footer-list li {
     margin-bottom: 9px;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
@@ -316,11 +329,13 @@ header {
     font-weight: 700;
     line-height: 24px;
 }
-
-.footer-item a {
+.footer-list a {
     color: #dedede;
     text-decoration: none;
     font-weight: 400;
+}
+.footer-list a:hover{
+    color: #FBB731;
 }
 .footer-item span {
     color: dedede;
@@ -328,16 +343,19 @@ header {
     font-weight: 400;
     margin-bottom: 2px;
 }
-
-.footer-tel ul {
+.footer-list-tel {
+    margin-top: 0;
+}
+.footer-list-tel li {
+    margin-bottom: 12px;
+}
+.footer-list-tel a {
     font-size: 20px;
     font-weight: 900;
     color: #FBB731;
-    margin-top: 0;
 }
-
-.footer-tel li {
-    margin-bottom: 12px;
+.footer-list-tel a:hover {
+    color: #FFFFFF;
 }
 .footer-list {
     padding-left: 0;
