--- a/styles/main.css
+++ b/styles/main.css
@@ -148,7 +148,7 @@ header {
     background-size: cover;
     background-position: center center;
     padding: 100px 100px 120px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 .banner-title {
     font-size: 60px;
@@ -188,10 +188,14 @@ header {
     background-color: #fbb731;
     border-radius: 5px;
     border: 1px solid #fbb731;
+    transition: 0.2s;
 }
 .banner-link:hover {
     background: transparent;
     color: #fbb731;
+}
+.menu {
+    padding-top: 20px;
 }
 .menu-header {
     display: flex;
@@ -349,6 +353,32 @@ header {
 .footer-list {
     padding-left: 0;
     list-style-type: none;
+}
+
+.button-up {
+    background-color: #FBB731;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #1E2F40;
+    text-decoration: none;
+    padding: 5px 20px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 5px;
+    transition: 1s;
+}
+
+.button-up:hover {
+    background-color: #F37335;
+}
+
+.button-up.hidden {
+    opacity: 0;
+}
+.button-up.visible {
+    opacity: 1;
 }
 /* Style INDEX */
 
